CSS Oversized Top Image Fix
Make maximum width of top image (#imagetopframe img) 450 pixels.  This way one large image are shrunk and small images are not enlarged.

Explicitly set top image frame (#imagetopframe) to 450 pixels width and set overflow to hidden.  This way the image is still cropped if the browser does not support max-width.

--- a/stylesheets/luther2010/master.css
+++ b/stylesheets/luther2010/master.css
@@ -60,6 +60,7 @@ body {
  float:left;	
  width:234px; 
 }
+
 .content figure {
  margin:0 0 1.5em;
 }
@@ -67,6 +68,15 @@ body {
  margin:1.5em 0;
  margin:.75em 0 2.25em; 
 }
+
+.content figure#imagetopframe {
+ overflow:hidden;
+ width:450px;	
+}
+.content figure#imagetopframe img {
+ max-width:450px;
+}
+
 .content p,
 .content ol,
 .content ul {
